# BoardGameTournament

./: .gitignore  README.md  completions.bash  completions.zsh  license.txt  main.py  pyproject.toml
gametournament/: base_scorer.py  constants.py  db.py  formula.py  models.py  point_scorer.py  rank_scorer.py  tournament_tools.py  utils.py
